# morskamary

./: # Changelog for `2162d953c8d0c13b775dcf3.litcoffee  # Changelog for `68efdd831ef476fb3cbdf16.md  # Changelog for `c068036473875707f9d8054.litcoffee  .env  .env.ps1  .flake8  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.txt  CITATION.txt  CONTRIBUTING.md  COPILOT_MCP_SETUP.md  DATA_GOVERNANCE.txt  DEMO_COMPLETE_SUMMARY.md  Deploy-CopilotSynergy.ps1  Dockerfile  Dockerfile.txt  LLM_CONTEXT_INSTRUCTION.txt  LOAD_REAL_DATA.md  MANIFEST_SOURCES.csv  Makefile  README.md  SECURITY.md  SESSION_SUMMARY.md  TEST_COVERAGE_IMPROVEMENTS.md  TEST_COVERAGE_REPORT.md  __azurite_db_queue__.json  __azurite_db_queue_extent__.json  branch_reconciliation_2026-04-30.md  cloudbuild.live.yaml  cloudbuild.yaml  compose.debug.yaml  compose.yaml  coverage.json  demo_additional_tasks.py  demo_workspace_instructions.py  fix_all_md.py  fix_markdown.py  fix_markdown_bulk.py  (+12 more)
.allai/: workspace.db
.devcontainer/: devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md  add-competence.prompt.md  competence-domain.instructions.md  copilot-instructions.md  copilot-instructions2.md  integrate-literature.skill.md  repository-guardrails.instructions.md
config/: live_query_protocol.yml  research_provider_policy.yml  research_queries.yml  research_sources.example.yml
deep_update_patch/: EXECUTIVE_PLAN.txt  load_real_competences.py  main_real_data.py  run_full_analysis.py
docs/: AGENT_WORKING_AGREEMENT.md  BASELINE_VALIDATION.md  CONTENT_ANALYSIS_PROTOCOL.md  COPILOT_CLOUD_AGENT_SETUP.md  CROSS_RUN_EVIDENCE_CODEBOOK.md  CUMULATIVE_DATABASE_METHODOLOGY.md  DATA_RELEASE_POLICY.md  GOOGLE_CLOUD_BUILD_OPTIONAL_SETUP.md  (+11 more)
(+698 files in other folders)
